Actualización del package.json

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nestjs-ghaphql-devtalles",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Juan Gómez << gb.jc@outlook.com >>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
